--- a/style.css
+++ b/style.css
@@ -544,6 +544,7 @@
                 -webkit-overflow-scrolling: touch; /* iOS cihazlarda daha pürüzsüz kaydırma deneyimi için */
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
+                max-height: 500px;
             }
 
             .nav-links .group.active>a .fa-chevron-down {
@@ -554,6 +555,10 @@
                 padding: 0.5rem 1rem;
                 font-size: 0.85rem;
                 border-bottom: 1px solid #e9ecef;
+                background-color: rgba(255,255,255,0.9) !important;
+                margin: 2px 0;
+                border-radius: 4px;
+                border: none !important;
             }
 
             .nav-links .group .dropdown a:last-child {
