--- a/style.css
+++ b/style.css
@@ -1266,3 +1266,7 @@ body.translating {
     border-color: #16a34a !important;
     box-shadow: 0 0 0 3px rgba(22, 163, 74, 0.1) !important;
 }
+
+* {
+    outline: 1px solid red;
+}
